# claude-history-rs

./: .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  goreleaser.yml  release-plz.yml
src/: main.rs
