[package]
name = "claude-history"
version = "0.1.1"
edition = "2024"
description = "Print the most recent Claude Code session for the current directory."
license = "MIT"
readme = "README.md"
repository = "https://github.com/simonwhitaker/claude-history-rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
dialoguer = { version = "0.12.0", default-features = false }
serde_json = "1.0.145"
